apps/platform/keycloak/base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-keycloak
  labels:
    platform.jaccloud.nl/managed-by: argocd
    platform.jaccloud.nl/tenant: platform
    platform.jaccloud.nl/service: keycloak
