apps/platform/keycloak/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
        app.kubernetes.io/component: auth
    spec:
      containers:
        - name: keycloak
          image: jacbeekers/platform-keycloak:0.1.0
          command: ["/opt/platform-keycloak/scripts/start-keycloak.sh"]
          args: ["start"]
          ports:
            - containerPort: 8443
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /auth/realms/master/.well-known/openid-configuration
              port: 8443
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /auth/realms/master
              port: 8443
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          volumeMounts:
            - name: realm-import
              mountPath: /opt/keycloak/realm-import
      volumes:
        - name: realm-import
          emptyDir: {}
